--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +11,52 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.min-h-screen {
+  min-height: 100vh;
+}
+
+.vert-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.char {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  width: 100px;
+  height: 100px;
+  border: 1px solid #bbb;
+  border-radius: 5px;
+  margin: 5px;
+  font-size: x-large;
+  font-weight: bold;
+}
+
+.description {
+  font-size: xx-large;
+}
+
+.mx-5 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.my-5 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.rotate {
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+  transform: rotateX(360deg);
 }
